web-infras/parser/tests/fixtures/babel/es2022/class-properties/no-ctor-2/output.txt
[SyntaxError]: Classes may not have a field named 'constructor'. (2,3)
2|  constructor
 | ^
